NguyenHongLinh-cuoi-ky-gd-1/scripts/security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   
  tls:
    - hosts:
        - linhx.test
      secretName: my-tls-secret
  rules:
    - host: linhx.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservices-frontend
                port:
                  number: 80
